<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/date"
	        android:textSize="15sp" />
	    <Button android:id="@+id/dateVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textSize="15sp"
	        android:background="@null" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/miles"
	        android:textSize="15sp" />
	    <EditText
	        android:id="@+id/od"
	        android:nextFocusDown="@+id/miles"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="15"
	        android:inputType="numberDecimal" >
	    </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/trip"
	        android:textSize="15sp" />
	    <EditText
	        android:id="@+id/miles"
	        android:nextFocusDown="@+id/gallons"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="15"
	        android:inputType="numberDecimal" >
	    </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/gallons"
	        android:textSize="15sp" />
	    <EditText
	        android:id="@+id/gallons"
	        android:nextFocusDown="@+id/cost"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="15"
	        android:inputType="numberDecimal" >
	    </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cost"
	        android:textSize="15sp" />
	    <EditText
	        android:id="@+id/cost"
	        android:nextFocusDown="@+id/enter"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="15"
	        android:inputType="numberDecimal"
	        android:imeOptions="actionDone" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Button android:id="@+id/enter"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:text="@string/enter"
	        android:textSize="15sp" />
	    <Button android:id="@+id/cancel"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:text="@string/cancel"
	        android:textSize="15sp" />
	</LinearLayout>

</LinearLayout>