<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Button android:id="@+id/enter"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/addNew"
	        android:textSize="20sp"
	        android:onClick="onClickCallback" />
	</LinearLayout>
	<TextView android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:textSize="20sp"
	    android:text="@string/total" />

	<TextView
	    android:id="@+id/total"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="35dp"
	    android:textSize="15sp" />

	<TextView android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:textSize="20sp"
	    android:text="@string/last" />
	<TextView android:id="@+id/last"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:paddingLeft="35dp"
	    android:textSize="15sp" />
	<View android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:background="@android:color/black"/>
    <ExpandableListView android:id="@+id/result"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:transcriptMode="alwaysScroll"
                        android:cacheColorHint="#00000000"
                        android:listSelector="@android:color/transparent"/>
</LinearLayout>