<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bkground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <View android:layout_width="fill_parent"
    	android:layout_height="8dp"
    	android:background="@android:color/transparent"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/needCarName" />
    
    <View android:layout_width="fill_parent"
    	android:layout_height="8dp"
    	android:background="@android:color/transparent"/>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carName" />
        <EditText android:id="@+id/enterCarName"
	        android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="textNoSuggestions"
		    android:imeOptions="actionDone" />
    </LinearLayout>
    
    <View android:layout_width="fill_parent"
    	android:layout_height="8dp"
    	android:background="@android:color/transparent"/>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/csvFile" />
        <TextView android:id="@+id/csvFile"
	        android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1" />
    </LinearLayout>
    
    <View android:layout_width="fill_parent"
    	android:layout_height="24dp"
    	android:background="@android:color/transparent"/>
    
    <Button android:id="@+id/positiveB"
        android:background="@drawable/button"
        android:text="Set Car Name"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
